--- a/scss/_drupal-override-product.scss
+++ b/scss/_drupal-override-product.scss
@@ -88,6 +88,9 @@
 .field--name-apic-summary .field--item {
   text-align: justify;
   line-height: 24px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 // Страница продукта ------------------------------------------------------
