--- a/scss/_drupal-override-product.scss
+++ b/scss/_drupal-override-product.scss
@@ -85,7 +85,7 @@
   font-weight: 500;
 }
 // Описание продукта
-.field--name-apic-summary .field--item {
+.catalog-info-public-cards-item-description .field--name-apic-summary .field--item {
   text-align: justify;
   line-height: 24px;
   white-space: nowrap;
