--- a/scss/_drupal-override-profile.scss
+++ b/scss/_drupal-override-profile.scss
@@ -1,4 +1,8 @@
 /* ----------------------- OVERRIDE DRUPAL DEFAULTS FOR USER PROFILE PAGE ----------------------- */
+// Блок "редактировать"
+.panel {
+  background-color: inherit;
+}
 
 .route-entityusercanonical .region-content, .route-entityuseredit-form .region-content, .route-change-pwd-pagechange-password-form:not(.pass-reset) .region-content {
   display: -ms-flexbox;
