--- a/scss/_news.scss
+++ b/scss/_news.scss
@@ -15,7 +15,7 @@
 }
 
 .news-card {
-    background-color: #2D2F35;
+    background-color: $color-light-grey-bg;
     border-radius: 8px;
     max-width: 17.5rem;
     height: 26.75rem;
