--- a/scss/_popular-api.scss
+++ b/scss/_popular-api.scss
@@ -10,7 +10,7 @@
 }
 
 .popular-api-card {
-    background-color: #2D2F35;
+    background-color: $color-light-grey-bg;
     border-radius: 8px;
     padding: 1rem 1rem 2rem;
     max-width: 17.5rem;
