--- a/scss/overrides.scss
+++ b/scss/overrides.scss
@@ -8,6 +8,7 @@
 
 // place further styling overrides here
 @import 'fonts';
+@import 'vars';
 @import 'general';
 @import 'drupal-override';
 @import 'cookie-banner';
