--- a/scss/_drupal-override-api-page.scss
+++ b/scss/_drupal-override-api-page.scss
@@ -30,7 +30,7 @@
 }
 
 ul.apiContent {
-  background: #2D2F35;
+  background: $color-light-grey-bg;
   border-radius: 8px;
   padding: 15px 5px !important;
 }
@@ -95,12 +95,12 @@ a.subscribeButton.button {
 }
 // Подсказка, появляющаяся после клика на инфо. кнопку
 .bx--tooltip {
-  background: #2D2F35;
+  background: $color-light-grey-bg;
   color: #F3F4F6;
   border: none;
 }
 .bx--tooltip .bx--tooltip__caret {
-  background: #2D2F35;
+  background: $color-light-grey-bg;
   border: none;
 }
 
@@ -348,7 +348,7 @@ use {
 .apiconnect-explorer .definitionDisplay .body, .apiconnect-explorer .codeSnippetsDisplay .body, .apiconnect-explorer .testRequestBody .body, .apiconnect-explorer .testResponseBody .body, .apiconnect-explorer .apiexplorer--snippet--light {
   border-top: none;
   padding: 1rem;
-  background: #2D2F35;
+  background: $color-light-grey-bg;
   border-radius: 8px;
 }
 
@@ -440,7 +440,7 @@ tr.bx--expandable-row-v2:hover+tr[data-child-row]>td {
 }
 .apiconnect-explorer .definitionDisplay, .apiconnect-explorer .definitionsBody .definitionDisplay, .apiconnect-explorer .responseSchema .definitionDisplay {
   border: none;
-  background-color: #2D2F35;
+  background-color: $color-light-grey-bg;
   border-radius: 8px;
 }
 .apiconnect-explorer .bx--tabs__nav {
