--- a/scss/_drupal-override-apps.scss
+++ b/scss/_drupal-override-apps.scss
@@ -64,7 +64,7 @@ a.button.apicNewApp {
 }
 
 .bx--card-footer {
-  background-color: #2D2F35;
+  background-color: $color-light-grey-bg;
   border-radius: 8px;
   color: $color-neutral-10;
   padding: 0;
