--- a/scss/_drupal-override.scss
+++ b/scss/_drupal-override.scss
@@ -188,7 +188,7 @@ li.dropit-trigger a {
 
 // Карточки АПИ
 .bx--card {
-    background-color: #2D2F35;
+    background-color: $color-light-grey-bg;
     border-radius: 8px;
     border: none;
 }
@@ -485,6 +485,34 @@ button#edit-reset {
 // Алерты наверху страницы -------------------------------------------------------
 .alert {
     color: #F3F4F6;
+}
+
+// Переключатели страниц внизу
+.pagination>li>a,
+.pagination>li>span {
+    color: $color-neutral-05;
+    background-color: $color-light-grey-bg;
+    border: none;
+}
+.pagination>.active>a,
+.pagination>.active>span,
+.pagination>.active>a:hover,
+.pagination>.active>span:hover,
+.pagination>.active>a:focus,
+.pagination>.active>span:focus {
+    border: none;
+    background-color: $color-primary-50;
+}
+
+.pagination>li:last-child>a,
+.pagination>li:last-child>span {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+.pagination>li:first-child>a,
+.pagination>li:first-child>span {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
 }
 
 
