--- a/scss/_existing-clients.scss
+++ b/scss/_existing-clients.scss
@@ -24,7 +24,7 @@
     width: 24rem;
 
     &-body {
-        background-color: #2D2F35;
+        background-color: $color-light-grey-bg;
         border-radius: 8px;
         height: 12.5rem;
         padding: 1.5rem 0;
