--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -10,3 +10,6 @@ $color-light-grey-bg: #2D2F35;
 $color-coldgrey-50: #7E8390;
 $color-primary-50: #307FFF;
 $color-primary-60: #0062FF;
+
+$color-darkweb-text-primary: #E2E5E9;
+$color-darkweb-bg: #252A32;
